OODT-887 change url to uri to prevent blocking and increase performance